<resources>
    <string name="app_name">Centsation</string>
    <string name="app_easter_egg">You\'ve done this before, haven\'t you?</string>
    <string name="app_license">GNU General Public License v3.0</string>
    <string name="app_author">eipna</string>

    <string name="toolbar_main">Savings</string>
    <string name="toolbar_create">New saving</string>
    <string name="toolbar_edit">Edit saving</string>
    <string name="toolbar_archive">Archive</string>
    <string name="toolbar_settings">Settings</string>

    <string name="link_app_source_code">https://github.com/eipna/Centsation</string>
    <string name="link_app_author">https://github.com/eipna</string>

    <string name="empty_indicator_main">No savings found</string>
    <string name="empty_indicator_archive">No archived savings</string>

    <string name="radio_button_deposit">Deposit</string>
    <string name="radio_button_withdraw">Withdraw</string>

    <string name="field_error_required">*required</string>
    <string name="field_error_empty_saving">Please enter a value</string>
    <string name="field_error_negative_saving">Saving cannot be negative</string>

    <string name="field_saving_name">Name</string>
    <string name="field_saving_current_saving">Current Saving</string>
    <string name="field_transaction_amount">Amount</string>
    <string name="field_saving_goal">Goal</string>
    <string name="field_saving_notes">Notes</string>
    <string name="field_saving_deadline">Deadline</string>

    <string name="check_box_never_show_again">Never show again</string>

    <string name="dialog_title_import_notice">Import notice</string>
    <string name="dialog_title_request_alarm_permission">Alarm permission</string>
    <string name="dialog_title_create_saving">Create saving</string>
    <string name="dialog_title_edit_saving">Edit saving</string>
    <string name="dialog_title_delete_saving">Delete saving?</string>
    <string name="dialog_title_create_transaction">Create transaction</string>
    <string name="dialog_title_history_saving">History</string>

    <string name="dialog_message_import_notice">A backup may include deadlines. Make sure the application has all the necessary permissions for it to work properly.</string>
    <string name="dialog_message_delete_saving">You are about to delete this saving, this action cannot be undone.</string>
    <string name="dialog_message_request_alarm_permission">This app requires precise alarm scheduling for deadline reminders. Please grant this permission.</string>

    <string name="dialog_button_okay">Okay</string>
    <string name="dialog_button_grant">Grant</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_create">Create</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_edit">Save</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_submit">Submit</string>

    <string name="menu_item_save">Save</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_overflow">More Options</string>
    <string name="menu_item_sort">Sort By</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_current_saving">Saving</string>
    <string name="menu_item_sort_goal">Goal</string>
    <string name="menu_item_sort_deadline">Deadline</string>
    <string name="menu_item_sort_ascending">Ascending</string>
    <string name="menu_item_sort_descending">Descending</string>

    <string name="toast_import_successful">Import successful</string>
    <string name="toast_export_successful">Export successful</string>
    <string name="toast_export_no_savings_found">No savings to export</string>
    <string name="toast_notification_permission_denied">Notification permission denied</string>
    <string name="toast_deny_import_notice">Deadlines may not work properly</string>

    <string name="tooltip_share">Share Notes</string>
    <string name="tooltip_update">New Transaction</string>
    <string name="tooltip_history">History</string>
    <string name="tooltip_archive">Archive</string>
    <string name="tooltip_unarchive">Unarchive</string>
    <string name="tooltip_delete">Delete</string>

    <string name="snack_bar_permission_notifications">This feature requires notification permissions to work.</string>

    <!-- App Preference Category -->
    <string name="preference_category_appearance">Appearance</string>
    <string name="preference_list_theme">Theme</string>
    <string name="preference_list_contrast">Contrast</string>
    <string name="preference_switch_dynamic_colors_title">Dynamic Colors</string>
    <string name="preference_switch_dynamic_colors_summary">Apply colors from your wallpaper to the application theme</string>

    <!-- Savings Preference Category -->
    <string name="preference_category_savings">Savings</string>
    <string name="preference_list_currency">Currency</string>
    <string name="preference_list_deadline_format">Deadline Format</string>

    <!-- Backup Preference Category -->
    <string name="preference_category_backup">Backup</string>
    <string name="preference_import_title">Import</string>
    <string name="preference_import_summary">Import back your savings</string>
    <string name="preference_export_title">Export</string>
    <string name="preference_export_summary">Export your savings</string>

    <!--About Preference Category -->
    <string name="preference_category_about">About</string>
    <string name="preference_app_version">Version</string>
    <string name="preference_app_license">License</string>
    <string name="preference_app_source_code_title">Source Code</string>
    <string name="preference_app_source_code_summary">Check the Github repository and the README</string>
    <string name="preference_app_author">Author</string>
</resources>