<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/preference_category_app"
        app:iconSpaceReserved="false"
        app:allowDividerBelow="true">

        <ListPreference
            app:key="theme"
            app:title="@string/preference_list_theme"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="dynamic_colors"
            app:iconSpaceReserved="false"
            app:widgetLayout="@layout/view_preference_switch"
            app:title="@string/preference_switch_dynamic_colors_title"
            app:summary="@string/preference_switch_dynamic_colors_summary"/>

        <ListPreference
            app:key="currency"
            app:title="@string/preference_list_currency"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preference_category_backup"
        app:allowDividerBelow="true">

        <Preference
            app:key="import"
            app:title="@string/preference_import_title"
            app:summary="@string/preference_import_summary"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="export"
            app:title="@string/preference_export_title"
            app:summary="@string/preference_export_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_about"
        app:iconSpaceReserved="false">

        <Preference
            app:key="app_license"
            app:title="@string/preference_app_license"
            app:summary="@string/app_license"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="app_source_code"
            app:title="@string/preference_app_source_code_title"
            app:summary="@string/preference_app_source_code_summary"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/link_app_source_code"/>
        </Preference>

        <Preference
            app:key="app_author"
            app:title="@string/preference_app_author"
            app:summary="@string/app_author"
            app:iconSpaceReserved="false">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/link_app_author"/>
        </Preference>

        <Preference
            app:key="app_version"
            app:title="@string/preference_app_version"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

</PreferenceScreen>